--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <main>
 
     </main>
-    <footer>CopyRight &copy; PurpleBeard - Student Name</footer>
+    <footer>CopyRight &copy; PurpleBeard - Chris Williams</footer>
   </body>
 </html>
