Mobile view - not quite finished

--- a/index.html
+++ b/index.html
@@ -4,16 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
-    <title>Website Build</title>
+    <title>Howling Pizza</title>
   </head>
+  
+  
   <body>
-    <header>
+    
+    <section id='mainSection'>
+      <header>
+        <section class='mobileView'>
+          <img src="./images/img_2.PNG" alt="logo">
+        </section>
+      </header>
 
-    </header>
-    <main>
+      <main class='banner'>
+        <ul class='mobileView'>
+          <li><a href="#" class="navlinks">Deals</a></li>
+          <li><a href="#" class="navlinks">Locations</a></li>
+          <li><a href="#" class="navlinks">Help</a></li>
+          <li><a href="#" class="navlinks">Contact</a></li>
+        </ul>
+      </main>
+    </section>
 
-    </main>
-    <footer>CopyRight &copy; PurpleBeard - Chris Williams</footer>
+    <footer>
+      <div id='footerLeft'>CopyRight &copy; PurpleBeard - Howler 1</div>
+      <div id='footerRight'>
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter-square"></i>
+      </div>
+
+    </footer>
   </body>
 </html>
