--- a/index.html
+++ b/index.html
@@ -11,24 +11,35 @@
   
   
   <body>
-    
     <section id='mainSection'>
       <header>
+
+        <!-- Header Mobile Only -->
         <section class='mobileView'>
           <img src="./images/img_2.PNG" alt="logo">
         </section>
       </header>
 
       <main class='banner'>
-        <ul class='mobileView'>
-          <li><a href="#" class="navlinks">Deals</a></li>
-          <li><a href="#" class="navlinks">Locations</a></li>
-          <li><a href="#" class="navlinks">Help</a></li>
-          <li><a href="#" class="navlinks">Contact</a></li>
-        </ul>
+
+        <!-- Body Mobile Only -->
+        <section class='mobileView'>
+          <ul class='nav'>
+            <li><a href="#" class="navlinks">Deals</a></li>
+            <li><a href="#" class="navlinks">Locations</a></li>
+            <li><a href="#" class="navlinks">Help</a></li>
+            <li><a href="#" class="navlinks">Contact</a></li>
+          </ul>
+          <div class='bannerText'>
+            <h1>Contact-free</h1>
+            <p>on all deliveries across the UK</p>
+          </div>
+        </section>
       </main>
     </section>
 
+
+    <!-- Footer for both Desktop and Mobile -->
     <footer>
       <div id='footerLeft'>CopyRight &copy; PurpleBeard - Howler 1</div>
       <div id='footerRight'>
@@ -36,7 +47,6 @@
         <i class="fab fa-instagram"></i>
         <i class="fab fa-twitter-square"></i>
       </div>
-
     </footer>
   </body>
 </html>
