--- a/index.html
+++ b/index.html
@@ -13,7 +13,31 @@
   <body>
     <section id='mainSection'>
       <header>
+        <section class='desktopView'>
+        <!-- Header Mobile Only -->
 
+        <div class='warning'>
+          <p>Due to adverse weather in some locations delivery may take longer than usual. Sorry for the incovenience and thank you for your patience.</p>
+        </div>
+        <nav class='navBar'>
+          <div id='navLeft'>
+            <a href="https://www.pizzahut.co.uk" target='_blank'>
+              <img src="./images/img_2.PNG" alt="logoImage">
+            </a>
+          </div>
+
+          <ul id='navMiddle'>
+            <li><a href="#" class="navlinks">Deals</a></li>
+            <li><a href="#" class="navlinks">Locations</a></li>
+            <li><a href="#" class="navlinks">Help</a></li>
+            <li><a href="#" class="navlinks">Contact</a></li>
+          </ul>
+
+          <div id='navRight'>
+            <img src="./images/img_3.PNG" alt="cert">
+          </div>
+        </nav>
+      </section>
         <!-- Header Mobile Only -->
         <section class='mobileView'>
           <img src="./images/img_2.PNG" alt="logo">
@@ -21,6 +45,25 @@
       </header>
 
       <main class='banner'>
+        <!-- Body Desktop Only -->
+        <section class='desktopView'>
+          <img src="./images/img_1.jpg" alt="promo" id='bannerPromo'>
+          <div class='bannerText'>
+            <h1>Contact-free</h1>
+            <p>on all deliveries across the UK</p>
+          </div>
+          <section class='order'>
+            <h1>Delivery</h1>
+            <h2>Contact-Free</h2>
+            <p>All our deliveries are contact-free to keep everyone healthy. All orders will need to be paid online by debit/credit card.</p>
+            <a href="https://www.pizzahut.co.uk/contactlessdelivery" target="_blank">Learn More</a>
+            <form>
+              <input type="text" placeholder="Postcode" />
+              <button>Find My Hut</button>
+            </form>
+          </section>
+        
+        </section>
 
         <!-- Body Mobile Only -->
         <section class='mobileView'>
